--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
-    "target": "ES6",
-    "module": "CommonJS"
+    "target": "ES2017",
+    "module": "CommonJS",
+    "lib": ["ES2017", "DOM"]
   }
 }
